[gd_scene load_steps=5 format=3 uid="uid://dt6aena41w78c"]

[ext_resource type="Texture2D" uid="uid://do7tgtgqsi62q" path="res://levels/objects/door/assets/door_a.png" id="1_1oqp5"]
[ext_resource type="Script" path="res://levels/objects/door/door.gd" id="1_7qf0y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4w4n"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_lxsc3"]
radius = 20.0

[node name="Door" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7qf0y")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_1oqp5")
hframes = 2

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d4w4n")

[node name="OpenRange" type="Area2D" parent="."]
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="OpenRange"]
shape = SubResource("CircleShape2D_lxsc3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="OpenRange" to="." method="_on_open_range_body_entered"]
[connection signal="body_exited" from="OpenRange" to="." method="_on_open_range_body_exited"]
